# 063-rag-for-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  retriever.py  signals.py
python/examples/: 01_retrieval_demo.py  02_signal_generation.py  03_backtest_demo.py  __init__.py
rust_rag_trading/: Cargo.toml
rust_rag_trading/src/: backtest.rs  data.rs  document.rs  error.rs  lib.rs  retriever.rs  signals.rs
